syntax = "proto3";

package example;
option go_package = "go;proto";

message SimpleApiResponse {
  int32 status = 1;
  string message = 2;
}

message Message {
  string message = 1;
}