syntax = "proto3";

package example;
option go_package = "go;proto";

import "common.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  string name = 1;
  int32 price = 2;
}

message GetItemsResponse {
  repeated GetItemResponse items = 1;
}

message PostItemRequest {
  string name = 1 [(validate.rules).string = {
    min_len: 1,
    max_len: 30,
    pattern: "^[a-zA-Z0-9\\s]+$"
  }];
  int32 price = 2 [(validate.rules).int32.gt = 0];
}

message PostItemsRequest {
  repeated PostItemRequest items = 1;
  string uuid = 2;
}

service ItemService {
  rpc GetItem (GetItemRequest) returns (GetItemResponse);
  rpc GetItems (google.protobuf.Empty) returns (GetItemsResponse);
  rpc PostItems (PostItemsRequest) returns (google.protobuf.Empty);
}
